--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <!-- 
     - google font link
@@ -99,7 +99,7 @@
       <div class="container">
 
         <a href="#" class="logo">
-          <img src="logo.png" alt="Homeverse logo">
+          <img src="./assets/images/logo.png" alt="Homeverse logo">
         </a>
 
         <nav class="navbar" data-navbar>
@@ -107,7 +107,7 @@
           <div class="navbar-top">
 
             <a href="#" class="logo">
-              <img src="logo.png" alt="Homeverse logo">
+              <img src="./assets/images/logo.png" alt="Homeverse logo">
             </a>
 
             <button class="nav-close-btn" data-nav-close-btn aria-label="Close Menu">
@@ -214,7 +214,7 @@
           </div>
 
           <figure class="hero-banner">
-            <img src="hero-banner.png" alt="Modern house model" class="w-100">
+            <img src="./assets/images/hero-banner.png" alt="Modern house model" class="w-100">
           </figure>
 
         </div>
